--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
           <input type="password" name="" placeholder="Enter password Here" />
           <button class="btnn"><a href="#">Login</a></button>
           <p class="link">Don't have an account</p>
-          <a class="Sign" href="#">Sign up </a> her </a></p>
+          <a class="Sign" href="#">Sign up her</p>
           <p class="liw">Log in with</p>
           <div class="icons">
             <a href="#"><ion-icon name="logo-facebook"></ion-icon></a>
